--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -30,3 +30,11 @@
   - firstname: ["Emily A", "Emily A.", "E. A.", "Emily"]
     url: https://www.bostonivf.com/our-practice/physicians/EmilySeidler/
 
+"Green":
+  - firstname: ["Ben Z", "Ben Z.", "B. Z.", "Ben"]
+    url: https://www.benzevgreen.com/
+
+"Griffin, Jr.":
+  - firstname: ["Christopher L", "Christopher L.", "C. L.", "Christopher"]
+    url: https://law.arizona.edu/christopher-l-griffin-jr
+
