--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -34,7 +34,7 @@
   - firstname: ["Ben Z", "Ben Z.", "B. Z.", "Ben"]
     url: https://www.benzevgreen.com/
 
-"Griffin, Jr.":
+"Griffin":
   - firstname: ["Christopher L", "Christopher L.", "C. L.", "Christopher"]
     url: https://law.arizona.edu/christopher-l-griffin-jr
 
