--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -18,7 +18,7 @@
 
 "Thakur":
   - firstname: ["Sujay", "S."]
-    url: https://scholar.google.com/citations?user=p7QEfQoAAAAJ&hl=en
+    url: 
     status: M
 
 "Guénais":
