--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -63,3 +63,11 @@
 "Girash":
   - firstname: ["J.", "John"]
     url: https://scholar.harvard.edu/girash/home
+    
+"Yao":
+  - firstname: ["J.", "Jiayu"]
+    url: https://yaojiayu0826.github.io/
+    
+"Coker":
+  - firstname: ["B.", "Beau"]
+    url: https://beaucoker.github.io/
