--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,9 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
+  music:
+    output: true
+    permalink: /music/:path/
   projects:
     output: true
     permalink: /projects/:path/
@@ -270,7 +273,7 @@ enable_tooltips:            false  # enables automatic tooltip links generated
 enable_darkmode:            false   # enables switching between light/dark modes
 enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
-enable_project_categories:  true   # enables categorization of projects into
+enable_project_categories:  false   # enables categorization of projects into
                                    # multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
 
