--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ stackoverflow_id: #your stackoverflow id
 contact_note: >
   
 
-google_analytics: UA-77791313-2  # your google-analytics ID (format: UA-XXXXXXXXX)
+google_analytics: G-KB54ZTDTNF  # your google-analytics ID 
 google_site_verification:  # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
