--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ contact_note: >
   
 
 google_analytics: G-KB54ZTDTNF  # your google-analytics ID 
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification: Bik7o47t8LWfR18eH4FK_fZzR3_xWyOReXlg-WUpm-I  # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
