--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -104,3 +104,6 @@
   - firstname: ["M.", "Matthew"]
     url: https://nocklab.fas.harvard.edu/people
     
+"van Genugten":
+  - firstname: ["R.", "Ruben"]
+    url: https://ruben.rbind.io/
