--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"Yacoby":
+  - firstname: ["Yaniv", "Y."]
+    url: https://yanivyacoby.github.io/
+
 "Doshi-Velez":
   - firstname: ["Finale", "F."]
     url: https://finale.seas.harvard.edu/
