--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -3,7 +3,13 @@
   address: 47 Palmer St, Cambridge, MA 02138
   date: 2024-01-12 20:30:00
   url: "https://www.passim.org/live-music/bcmfest-2024/"
-  description: 
+  description: Triga is a folk music trio formed on a Boston rooftop. With roots in various traditions -- Swedish nyckelharpa music, Québécois fiddling, Irish bouzouki, baroque improvisation -- the three members of Triga bring a unique sound to old and new tunes alike.
+- title: "Triga @ Tunnel Vienna Live"
+  location: Tunnel Vienna Live
+  address: Florianigasse 39, 1080 Wien, Austria
+  date: 2024-01-12 20:30:00
+  url: "https://www.tunnel-vienna-live.at/events/doppelkonzert-violiebe-triga/"
+  description: Triga is a folk music trio formed on a Boston rooftop. With roots in various traditions -- Swedish nyckelharpa music, Québécois fiddling, Irish bouzouki, baroque improvisation -- the three members of Triga bring a unique sound to old and new tunes alike.
 - title: "Blue Thread @ Museum Concert Series of Rhode Island"
   location: First Unitarian Church of Providence
   address: 1 Benevolent St, Providence, RI 02906
