--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
         npm install -g mermaid.cli
+    - name: Build Website
+      run: bundle exec jekyll build
     - name: Setup deploy options
       id: setup
       run: |
