--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Yaniv
 last_name: Yacoby
 email: yanivyacoby@g.harvard.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Yaniv Yacoby, machine learning researcher and musician based in Boston.
 footer_text: >
   Adapted from the <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: Probabilistic Machine Learning, Uncertainty Quantification, Approximate Inference, Deep Bayesian Models, Latent Variable Models  # add your own keywords or leave empty
