--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Yaniv Yacoby # the website title (if blank, full name will be used instead)
 first_name: Yaniv
 last_name: Yacoby
 email: yanivyacoby@g.harvard.edu
