--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -4,16 +4,16 @@
   date: 2024-01-27 19:30:00
   url: "https://bmcvt.org/northern-roots-festival/"
   description: Triga is a folk music trio formed on a Boston rooftop. With roots in various traditions -- Swedish nyckelharpa music, Québécois fiddling, Irish bouzouki, baroque improvisation -- the three members of Triga bring a unique sound to old and new tunes alike.
-- title: "Workshop: Creating Counter-melody Accompaniment"
+- title: "Workshop: Creating counter-melody accompaniment"
   location: Northern Roots Music Festival
   address: 72 Blanche Moyse Wy, Brattleboro, VT 05301
-  date: 2024-01-27 14:00:00
+  date: 2024-01-27 13:00:00
   url: "https://bmcvt.org/northern-roots-festival/"
   description: 
-- title: "Workshop: Introduction to Irish Bouzouki Accompaniment"
+- title: "Workshop: Introduction to Irish bouzouki accompaniment"
   location: Northern Roots Music Festival
   address: 72 Blanche Moyse Wy, Brattleboro, VT 05301
-  date: 2024-01-27 15:00:00
+  date: 2024-01-27 12:00:00
   url: "https://bmcvt.org/northern-roots-festival/"
   description: 
 - title: "Triga @ Boston Celtic Music Festival"
