--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -1,3 +1,9 @@
+- title: "Triga @ Moho Somerville (House Concert)"
+  location: For location, see event details.
+  address: 
+  date: 2024-01-28 19:30:00
+  url: "https://www.facebook.com/events/655120430032203/?active_tab=about"
+  description: Come listen to the soothing sounds of the amazing songwriter Night Moth, international folk band Triga, and the beautiful ambient collaboration of Cloudroom and the Akiva Condux Band!
 - title: "Triga @ Northern Roots Music Festival Evening Concert"
   location: Northern Roots Music Festival
   address: 72 Blanche Moyse Wy, Brattleboro, VT 05301
