--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -1,5 +1,5 @@
 - title: "Triga @ Moho Somerville (House Concert)"
-  location: For location, see event details.
+  location: See event details for location.
   address: 
   date: 2024-01-28 19:30:00
   url: "https://www.facebook.com/events/655120430032203/?active_tab=about"
