--- a/_config.yml
+++ b/_config.yml
@@ -102,13 +102,13 @@ collections:
     defaults:
       layout: post
     output: true
-    permalink: /news/:path/
+    permalink: /news/:path
   music:
     output: true
-    permalink: /music/:path/
+    permalink: /music/:path
   projects:
     output: true
-    permalink: /projects/:path/
+    permalink: /projects/:path
 
 news_limit: 5
 
