--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -111,3 +111,12 @@
 "van Genugten":
   - firstname: ["R.", "Ruben"]
     url: https://ruben.rbind.io/
+
+"Walsh":
+  - firstname: ["C.", "Conor"]
+    url: https://wyss.harvard.edu/team/associate-faculty/conor-walsh/
+
+"Arens":
+  - firstname: ["Philipp", "P."]
+    url: 
+    status: P
