--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -120,3 +120,13 @@
   - firstname: ["Philipp", "P."]
     url: 
     status: P
+
+"Tadesse":
+  - firstname: ["Hiwot", "H.", "H. B.", "Hiwot B."]
+    url: https://hiwot985.github.io/
+    status: P
+
+"Hüyük":
+  - firstname: ["Alihan", A."]
+    url: https://alihanhyk.github.io
+
