--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -123,7 +123,7 @@
 
 "Tadesse":
   - firstname: ["Hiwot", "H.", "H. B.", "Hiwot B."]
-    url: https://hiwot985.github.io/
+    url: https://hiwot-belay-tadesse.github.io
     status: P
 
 "Hüyük":
