--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -18,3 +18,7 @@
 
 "GPSMDMS":
   url: https://gp-seminar-series.github.io/neurips-2022/
+
+"MOSS":
+  url: https://sites.google.com/view/moss2025
+
