--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -105,7 +105,7 @@
     url: https://www.kellyzuromski.com/
 
 "Nock":
-  - firstname: ["M.", "Matthew"]
+  - firstname: ["M.", "Matthew", "M. K.", "Matthew K."]
     url: https://nocklab.fas.harvard.edu/people
     
 "van Genugten":
