--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -14,7 +14,7 @@
   url: https://hcxai.jimdosite.com/
 
 "SIGCSE":
-  url: https://sigcse2023.sigcse.org/
+  url: http://sigcse2026.sigcse.org/
 
 "GPSMDMS":
   url: https://gp-seminar-series.github.io/neurips-2022/
