--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -132,7 +132,7 @@
 
 "Liu":
   - firstname: ["Yue-Jane", "Y."]
-    url: 
+    url: https://scholar.google.com/citations?user=EfSfs6MAAAAJ&hl=en
     status: U
 
 "Lu":
