--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -139,3 +139,13 @@
   - firstname: ["Malinda", "M."]
     url: https://www.linkedin.com/in/malindalu/
     status: U
+
+"Hang":
+  - firstname: ["Genesis", "G."]
+    url: http://www.linkedin.com/in/genesishang1
+    status: U
+
+"Chen":
+  - firstname: ["Annie", "A."]
+    url: https://www.linkedin.com/in/annie-chen-wc134/
+    status: U
