--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -149,3 +149,7 @@
   - firstname: ["Annie", "A."]
     url: https://www.linkedin.com/in/annie-chen-wc134/
     status: U
+
+"Neveux":
+  - firstname: ["Hope", "H."]
+    url: https://h-nev.github.io/site/
